tests/macro-tests/cases/widget_new/missing_value4.stderr
error: expected `;`
  --> cases/widget_new/missing_value4.rs:13:21
   |
13 |                     margin = 0;
   |                     ^^^^^^

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_value4.rs:11:9
   |
10 |       let _ = Wgt! {
   |  _____________-
11 | |         cursor =
   | |         ^^^^^^
12 | |                     // we expect these properties to be used.
13 | |                     margin = 0;
14 | |         enabled = true;
15 | |     };
   | |_____- argument #1 is missing
   |
note: method defined here
  --> $WORKSPACE/crates/zng-wgt-input/src/misc.rs
   |
   | pub fn cursor(child: impl IntoUiNode, cursor: impl IntoVar<CursorSource>) -> UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
   |
   - #[widget($crate::Wgt)]
   + (/* cursor */)
   |
